# kotone

./: .npmrc  Cargo.toml  README.md  binding.js  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
alloc/: Cargo.toml
example/: index.test.ts  index.ts  package.json  test.csv
src/: lib.rs  transform.rs
transform/: Cargo.toml
transform/src/: lib.rs
