[package]
name = "kotone"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["fz6m"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.8", default-features = false, features = [
    "napi4",
    "error_anyhow",
] }
anyhow = "1.0.86"
napi-derive = "2.16.9"
alloc = { path = "./alloc" }
kotone_transform = { path = "./transform" }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
