[package]
name = "alloc"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "alloc"

[target.'cfg(all(not(target_os = "linux"), not(target_family = "wasm")))'.dependencies]
mimalloc-rust = { version = "0.2.1" }

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2.1", features = ["local-dynamic-tls"] }

